<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="10dp"
        app:cardCornerRadius="10dp"
        >


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/tv_label_fragment_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="Masuk"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="40dp"
                android:id="@+id/inputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/MyEditTextViewStyle"
                    android:id="@+id/et_email_fragment_login"
                    android:hint="@string/hint_email"
                    android:drawableLeft="@drawable/ic_email_green"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayoutEmail">

                <EditText
                    style="@style/MyEditTextViewStyle"
                    android:id="@+id/et_password_fragment_login"
                    android:hint="@string/hint_pass"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_pass_green" />

            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/MyButtonStyle"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/inputLayoutPassword"
                android:id="@+id/btn_login_fragment_login"
                android:text="@string/lbl_login"
              />

            <TextView
                android:layout_below="@+id/btn_login_fragment_login"
                android:id="@+id/tv_create_account_fragment_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_create_at"
                android:gravity="center"
                android:textSize="15sp"
                android:padding="8dp"
                android:textColor="@color/colorPrimary"
                android:layout_margin="10dp"
                android:textStyle="bold"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>