<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="10dp"
        app:cardCornerRadius="10dp"
        >


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:padding="10dp"
            android:focusableInTouchMode="true">

            <RelativeLayout
                android:id="@+id/layout_image_fragment_sign_up"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/tv_label_fragment_sign_up"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/ic_launcher"
                    app:civ_border_width="1dp"
                    app:civ_border_color="@color/colorPrimaryDark"
                    android:layout_centerVertical="true"
                    android:id="@+id/iv_photo_fragment_sign_up"
                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_label_fragment_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="Daftar"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputLayoutName"
                android:layout_below="@+id/layout_image_fragment_sign_up">

                <EditText
                    style="@style/MyEditTextViewStyle"
                    android:id="@+id/et_name_fragment_sign_up"
                    android:hint="@string/hint_name"
                    android:drawableLeft="@drawable/ic_person_green"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputLayoutEmail"
                android:layout_below="@+id/inputLayoutName">

                <EditText
                    style="@style/MyEditTextViewStyle"
                    android:id="@+id/et_email_fragment_sign_up"
                    android:hint="@string/hint_email"
                    android:drawablePadding="8dp"
                    android:drawableLeft="@drawable/ic_email_green"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputLayoutPassword"
                android:layout_below="@+id/inputLayoutEmail">

                <EditText
                    style="@style/MyEditTextViewStyle"
                    android:id="@+id/et_password_fragment_sign_up"
                    android:hint="@string/hint_pass"
                    android:drawablePadding="8dp"
                    android:drawableLeft="@drawable/ic_pass_green"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputLayoutMobile"
                android:layout_below="@+id/inputLayoutPassword">

                <EditText
                    style="@style/MyEditTextViewStyle"
                    android:id="@+id/et_phone_fragment_sign_up"
                    android:hint="@string/hint_mobile"
                    android:drawableLeft="@drawable/ic_phone_green"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/MyButtonStyle"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/inputLayoutMobile"
                android:id="@+id/btn_sign_fragment_sign_up"
                android:text="@string/lbl_sign_up" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>