<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="vertical"
    android:orientation="vertical"
    android:padding="0dp"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:id="@+id/root_scrollview_user_profile_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            card_view:cardCornerRadius="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <RelativeLayout
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <RelativeLayout
                    android:id="@+id/image_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:visibility="visible"
                        android:layout_centerInParent="true"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/iv_photo_fragment_profile"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@drawable/ic_person_green"
                        app:civ_border_width="1dp"
                        app:civ_border_color="@color/colorPrimary"/>
                </RelativeLayout>

                <ImageView
                    android:id="@+id/iv_icon_user"
                    android:padding="13dp"
                    android:layout_alignParentLeft="true"
                    android:tint="@color/colorPrimary"
                    android:layout_below="@+id/image_layout"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_person_green"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/iv_icon_user"
                    android:layout_below="@+id/image_layout"
                    android:id="@+id/label_name_fragment_user_details_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/colorPrimary"
                    android:gravity="center|start"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:drawablePadding="8dp"
                    android:textColorHint="@color/colorPrimary"
                    android:hint="@string/hint_name"
                    android:tint="@color/colorPrimary"
                    />

                <TextView

                    android:layout_toRightOf="@+id/iv_icon_user"
                    android:layout_below="@+id/label_name_fragment_user_details_view"
                    android:id="@+id/tv_name_fragment_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/colorPrimary"
                    android:gravity="center|start"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColorHint="@color/colorPrimary"
                    android:hint="@string/hint_name"
                    android:tint="@color/colorPrimary"
                    />

                <View
                    android:layout_toRightOf="@+id/iv_icon_user"
                    android:layout_below="@+id/iv_icon_user"
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="1dp"/>

                <ImageView
                    android:id="@+id/iv_icon_email"
                    android:padding="13dp"
                    android:layout_alignParentLeft="true"
                    android:tint="@color/colorPrimary"
                    android:layout_below="@+id/iv_icon_user"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_email_green"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/iv_icon_user"
                    android:id="@+id/tv_label_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColorHint="@color/colorPrimary"
                    android:hint="@string/hint_email"
                    android:layout_toRightOf="@+id/iv_icon_email"
                    />

                <TextView
                    android:layout_below="@+id/tv_label_email"
                    android:id="@+id/tv_email_fragment_profile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/colorPrimary"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColorHint="@color/colorPrimary"
                    android:hint="@string/hint_email"
                    android:layout_toRightOf="@+id/iv_icon_email"
                    />

                <View

                    android:layout_toRightOf="@+id/iv_icon_email"
                    android:layout_below="@+id/iv_icon_email"
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="1dp"
                    android:background="@color/colorPrimary" />

                <ImageView

                    android:id="@+id/iv_icon_phone"
                    android:layout_below="@+id/iv_icon_email"
                    android:padding="13dp"
                    android:layout_alignParentLeft="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_phone_green"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:id="@+id/tv_label_mobile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:drawableTint="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textColorHint="@color/colorPrimary"
                    android:hint="@string/hint_mobile"
                    android:layout_below="@+id/iv_icon_email"
                    android:layout_toRightOf="@+id/iv_icon_phone"
                    />

                <TextView
                    android:id="@+id/tv_mobile_fragment_profile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:drawableTint="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textColorHint="@color/colorPrimary"
                    android:hint="@string/hint_mobile"
                    android:layout_below="@+id/tv_label_mobile"
                    android:layout_toRightOf="@+id/iv_icon_phone"
                    />

                <View
                    android:layout_toRightOf="@+id/iv_icon_email"
                    android:layout_below="@+id/iv_icon_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="1dp"
                    android:background="@color/colorPrimary" />

                <ImageView
                    android:id="@+id/iv_update_profile"
                    android:padding="13dp"
                    android:layout_alignParentLeft="true"
                    android:tint="@color/colorPrimary"
                    android:layout_below="@+id/iv_icon_phone"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_list_item_green"/>

                <TextView
                    android:id="@+id/tv_update_profile_fragment_profile"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:drawableRight="@drawable/ic_arrow_down_green"
                    android:drawableTint="@color/colorPrimary"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColorHint="@color/colorPrimary"
                    android:hint="@string/hint_update_profile"
                    android:layout_below="@+id/iv_icon_phone"
                    android:layout_toRightOf="@+id/iv_icon_phone"
                    />

                <LinearLayout
                    android:visibility="gone"
                    android:layout_below="@+id/tv_update_profile_fragment_profile"
                    android:id="@+id/layout_update_fragment_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        style="@style/MyEditTextViewStyle"
                        android:layout_marginTop="5dp"
                        android:id="@+id/et_name_fragment_profile"
                        android:hint="@string/hint_name"
                        android:drawableLeft="@drawable/ic_person_green"
                        android:inputType="text"/>

                    <EditText
                        style="@style/MyEditTextViewStyle"
                        android:layout_marginTop="5dp"
                        android:id="@+id/et_email_fragment_profile"
                        android:hint="@string/hint_email"
                        android:drawableLeft="@drawable/ic_email_green"
                        android:inputType="textEmailAddress"/>

                    <EditText
                        style="@style/MyEditTextViewStyle"
                        android:layout_marginTop="5dp"
                        android:id="@+id/et_phone_fragment_profile"
                        android:hint="@string/hint_mobile"
                        android:drawableLeft="@drawable/ic_phone_green"
                        android:inputType="number"/>

                    <Button
                        style="@style/MyButtonStyle"
                        android:layout_margin="5dp"
                        android:id="@+id/btn_save_fragment_profile"
                        android:layout_below="@+id/tv_update_profile_fragment_profile"
                        android:text="@string/hint_save"
                        />
                </LinearLayout>

                <View
                    android:layout_toRightOf="@+id/iv_icon_email"
                    android:layout_below="@+id/layout_update_fragment_profile"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="1dp"
                    android:background="@color/colorPrimary" />

                <ImageView
                    android:id="@+id/iv_change_password"
                    android:padding="13dp"
                    android:layout_alignParentLeft="true"
                    android:tint="@color/colorPrimary"
                    android:layout_below="@+id/layout_update_fragment_profile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_pass_green"/>

                <TextView
                    style=""
                    android:id="@+id/tv_change_pass_profile_fragment_profile"
                    android:layout_marginTop="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:drawableRight="@drawable/ic_arrow_down_green"
                    android:drawableTint="@color/colorPrimary"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColorHint="@color/colorPrimary"
                    android:hint="@string/hint_change_pass"

                    android:layout_below="@+id/layout_update_fragment_profile"
                    android:layout_toRightOf="@+id/iv_icon_phone"
                    />

                <LinearLayout
                    android:visibility="gone"
                    android:layout_below="@+id/tv_change_pass_profile_fragment_profile"
                    android:id="@+id/layout_change_pass_fragment_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        style="@style/MyEditTextViewStyle"
                        android:layout_marginTop="5dp"
                        android:id="@+id/et_current_pass_fragment_profile"
                        android:hint="@string/hint_current_pass"
                        android:drawableLeft="@drawable/ic_pass_green"
                        android:inputType="textPassword"/>

                    <EditText
                        style="@style/MyEditTextViewStyle"
                        android:layout_marginTop="5dp"
                        android:id="@+id/et_new_pass_fragment_profile"
                        android:hint="@string/hint_new_pass"
                        android:drawablePadding="8dp"
                        android:drawableLeft="@drawable/ic_pass_green"
                        android:inputType="textPassword"/>

                    <Button
                        style="@style/MyButtonStyle"
                        android:layout_margin="5dp"
                        android:id="@+id/btn_change_pass_fragment_profile"
                        android:layout_below="@+id/tv_update_profile_fragment_profile"
                        android:text="@string/hint_change_pass"
                        />
                </LinearLayout>

                <View
                    android:layout_toRightOf="@+id/iv_icon_email"
                    android:layout_below="@+id/layout_change_pass_fragment_profile"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="1dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_below="@+id/layout_change_pass_fragment_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        style="@style/MyButtonStyle"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:visibility="visible"
                        android:id="@+id/btn_log_out_fragment_profile"
                        android:text="@string/lbl_logout"
                        />
                    <Button
                        style="@style/MyButtonStyle"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:visibility="visible"
                        android:id="@+id/btn_delete_profile_fragment_profile"
                        android:text="@string/lbl_account_delete"
                        />
                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>